# longitudinalSerology

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pytest.yml
syserol/: COVID.py  import.py  kaplonek.py  simulated.py  tensor.py  tensor3D.py
syserol/data/: readme.txt
syserol/figures/: common.py  figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py
syserol/test/: test_import.py  test_tensor.py
