[tool.poetry]
name = "longitudinalSerology"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.21"
scipy = "1.7"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.1"
tensorly = "^0.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "6.2"
pytest-cov = "3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
