[tool.poetry]
name = "syserol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21"
scipy = "^1.7"
tensorly = { git = "https://github.com/tensorly/tensorly", branch = "main" }
scikit-learn = "^1.0.1"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
tensorpack = { git = "https://github.com/meyer-lab/tensorpack.git", branch = "main" }
tensordata = { git = "https://github.com/meyer-lab/tensordata.git", branch = "main" }
svgutils = "^0.3.4"
ipykernel = "^6.5.1"
xarray = "^2022.3.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]                                                           
fbuild = "syserol.figures.common:genFigure"